@@ -1,6 +1,8 @@
 Changes in 2.2
 ==============
 
+* NEW: afpd: new volume option "nonetids"
+* NEW: afpd: ACL access check caching
 * UPD: Support for Berkeley DB 5.1
 * UPD: case-conversion is based on Unicode 6.0.0
 * UPD: cnid_metad: allow up to 4096 volumes
